$Id$
Copyright (c) 1996-2003 by Power System Engineering Research Center (PSERC)


Known Bugs
----------

Please report any bugs you find to Ray Zimmerman <rz10@cornell.edu>.

- MathWorks bug: constr in version 1 of the Optimization Toolbox does
  not correctly handle negative lambdas
- identification of binding constraints in printpf.m should
  use OPF_VIOLATION instead of size of MU
- 'area' is the name of an m-file in Matlab 5, my variable 'area'
  masks this m-file


Changes since 2.0
-----------------

7/15/04
	- The loadcase function (and therefore all of the run* functions
	  now optionally accept a struct with the data matrices as fields
	  in place of the case file name.
	- Added t subdirectory with various tests and testing tools.

7/8/04
	- Updated mp_lp.m and mp_qp.m to try linprog() and quadprog()
	  after trying bp, since lp() and qp() are no longer included
	  in the Optimization Toolbox as of version 3.

7/7/04
	- Removed case.m, added caseformat.m, made case9.m the default
	  case and fixed function names in other case files to avoid
	  use of reserved word 'case'.
	- Fixed bugs in runcomp.m.

6/23/04
	- Fixed bug in newtonpf.m which caused algorithm to diverge when
	  the Newton step resulted in a negative voltage magnitude.

4/17/03
	- Changed uopf.m to use a dynamic programming approach. More
	  computationally expensive, but should find significanly better
	  results when there are many gens to shut down.
	- Added mp_lp.m and mp_qp.m, equivalents to lp.m and qp.m,
	  respectively that call bpmpd if available. Modified LPrelax.m,
	  LPsetup.m and dcopf.m to call these new functions.

4/14/03
	- Fixed a bug in pfsoln.m which for cases with a single generator.

10/23/02
	- Fixed bus numbering bug in System Summary section of printpf.m.

6/20/00
	- Fixed a bug in printpf.m in the generator section, where
	  the generator was assumed to be off if it's real power
	  output was zero, even if the reactive output was non-zero.