@@ -1,4 +1,4 @@
-function [baseMVA, bus, gen, branch, area, gencost] = case9
+function [baseMVA, bus, gen, branch, areas, gencost] = case9
 %CASE9    Power flow data for 9 bus, 3 generator case.
 %   Please see 'help caseformat' for details on the case file format.
 
@@ -44,7 +44,7 @@ branch = [
 
 %%-----  OPF Data  -----%%
 %% area data
-area = [
+areas = [
 	1	5;
 ];
 
