@@ -1,6 +1,6 @@
 %CASEFORMAT    Defines the MATPOWER case file format.
 %   A MATPOWER case file is an M-file or MAT-file which defines the variables
-%   baseMVA, bus, gen, branch, area, and gencost. The format of the data is
+%   baseMVA, bus, gen, branch, areas, and gencost. The format of the data is
 %   similar to PTI format except where noted. An item marked with (+) indicates
 %   that it is included in this data but is not part of the PTI format. An item
 %   marked with (-) is one that is in the PTI format but is not included here.
