@@ -41,8 +41,8 @@ end
 dc = mpopt(10);						%% use DC formulation?
 
 %% read data & convert to internal bus numbering
-[baseMVA, bus, gen, branch, area, gencost] = loadcase(casename);
-[i2e, bus, gen, branch, area] = ext2int(bus, gen, branch, area);
+[baseMVA, bus, gen, branch, areas, gencost] = loadcase(casename);
+[i2e, bus, gen, branch, areas] = ext2int(bus, gen, branch, areas);
 
 %% get bus index lists of each type of bus
 [ref, pv, pq] = bustypes(bus, gen);
@@ -61,12 +61,12 @@ else								%% AC formulation
 	
 	%% run the optimal power flow
 	[bus, gen, branch, f, success, et] = opf(baseMVA, bus, gen, gencost, branch, ...
-						area, Ybus, Yf, Yt, ref, pv, pq, mpopt);
+						areas, Ybus, Yf, Yt, ref, pv, pq, mpopt);
 end
 
 %%-----  output results  -----
 %% convert back to original bus numbering & print results
-[bus, gen, branch, area] = int2ext(i2e, bus, gen, branch, area);
+[bus, gen, branch, areas] = int2ext(i2e, bus, gen, branch, areas);
 if fname
 	[fd, msg] = fopen(fname, 'at');
 	if fd == -1
@@ -80,7 +80,7 @@ printpf(baseMVA, bus, gen, branch, f, success, et, 1, mpopt);
 
 %% save solved case
 if solvedcase
-	savecase(solvedcase, baseMVA, bus, gen, branch, area, gencost);
+	savecase(solvedcase, baseMVA, bus, gen, branch, areas, gencost);
 end
 
 %% this is just to prevent it from printing baseMVA
